# NFCopy

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mateuszstarczyk/nfcopy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mateuszstarczyk/nfcopy/: MainActivity.java
app/src/main/java/com/mateuszstarczyk/nfcopy/nfc/: NfcManager.java
app/src/main/java/com/mateuszstarczyk/nfcopy/service/: ImageService.java
app/src/main/java/com/mateuszstarczyk/nfcopy/ui/: SquareImageView.java
app/src/main/res/drawable/: ic_wifi_tethering_black_24dp.xml  side_nav_bar.xml
app/src/main/res/drawable-anydpi/: ic_menu_card.xml
app/src/main/res/drawable-anydpi-v24/: ic_menu_nfc.xml
app/src/main/res/layout/: app_bar_main.xml  card_view.xml  fragment_cards.xml  fragment_new_card.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/xml/: hce.xml
app/src/test/java/com/mateuszstarczyk/nfcopy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nfcd/: CMakeLists.txt  build.gradle
nfcd/src/main/: AndroidManifest.xml
nfcd/src/main/assets/: xposed_init
nfcd/src/main/java/com/mateuszstarczyk/nfcopy/xposed/: Hooks.java  IPCBroadcastReceiver.java  Native.java
nfcd/src/main/jni/: chip.cpp  dlext.h  dlext_namespaces.h  javainterface.cpp  main.cpp  nfcd.h
(+69 files in other folders)
